Gestion des Compétitions

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,7 +33,7 @@
     <button *ngIf="!showCompetitionFilterModal && !showTeamFilterModal && !showMatchForm" 
             class="btn mt-2" 
             [ngClass]="selectedCompetitionFilter ? getCompetitionBadgeColor(selectedCompetitionFilter) : 'btn-info'"
-            (click)="showCompetitionFilterModal = true">
+            (click)="openCompetitionFilterModal()">
               <i class="fas fa-trophy text-white"></i>
               <span class="text-white"> {{ selectedCompetitionFilter || 'Compétitions' }}</span>
     </button>
@@ -111,49 +111,22 @@
         </div>
       </div>
 
-      <div class="score-modal" tabindex="-1" aria-labelledby="competitionFilterModalLabel" aria-hidden="true" *ngIf="showCompetitionFilterModal">
-        <div class="modal-dialog modal-body" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="competitionFilterModalLabel">Sélectionner une Compétition</h5>
-              <button type="button" class="close-button" (click)="closeCompetitionFilterModal()" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <div class="mb-3">
-                <label for="seasonSelect" class="form-label">Saison :</label>
-                <select id="seasonSelect" class="form-select" [(ngModel)]="selectedSeason">
-                  <option *ngFor="let season of getAvailableSeasons()" [value]="season">
-                    {{ season }}
-                  </option>
-                </select>
-              </div>
-              <div class="form-check">
-                <input type="radio" 
-                       class="form-check-input" 
-                       [value]="''" 
-                       [(ngModel)]="selectedCompetitionFilter" 
-                       id="allCompetitions">
-                <label class="form-check-label" for="allCompetitions">Toutes les compétitions</label>
-              </div>
-              <div *ngFor="let competition of uniqueCompetitions" class="form-check">
-                <input type="radio" 
-                       class="form-check-input" 
-                       [value]="competition" 
-                       [(ngModel)]="selectedCompetitionFilter" 
-                       id="{{competition}}">
-                <label class="form-check-label" for="{{competition}}">
-                  <span class="badge" [ngClass]="getCompetitionBadgeColor(competition)">{{ competition }}</span>
-                </label>
-              </div>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" (click)="closeCompetitionFilterModal()">Fermer</button>
-            </div>
-          </div>
-        </div>
-      </div>
+      <app-competition-filter-modal
+        *ngIf="showCompetitionFilterModal"
+        [competitions]="uniqueCompetitions"
+        [selectedSeason]="selectedSeason"
+        [availableSeasons]="filteredSeasonsForModal"
+        [selectedCompetition]="selectedCompetitionFilter"
+        [isCompetitionWithoutSeason]="isCompetitionWithoutSeason.bind(this)"
+        [getSuggestedSeason]="getSuggestedSeasonForCompetition.bind(this)"
+        (seasonChanged)="selectedSeason = $event"
+        (competitionSelected)="onCompetitionSelected($event)"
+        (competitionAdded)="onCompetitionAdded($event)"
+        (competitionUpdated)="onCompetitionUpdated($event)"
+        (competitionDeleted)="onCompetitionDeleted($event)"
+        (assignSeason)="onAssignSeason($event)"
+        (closeModal)="closeCompetitionFilterModal()">
+      </app-competition-filter-modal>
 
 
   </div>
